@@ -127,6 +127,7 @@ enum master_query_type {
 	MASTER_GAMESPY,
 	MASTER_HTTP,
 	MASTER_LAN,
+	MASTER_FILE,
 	MASTER_NUM_QUERY_TYPES,
 	MASTER_INVALID_TYPE
 };
