@@ -1,3 +1,6 @@
+Sep 15, 2002: Ludwig Nussel <l-n@users.sourceforge.net>
+- new master type "file", reads ip addresses from a file
+
 Sep 14, 2002: Ludwig Nussel <l-n@users.sourceforge.net>
 - support for Unreal Tournament 2003 Demo. No master yet. If you know one, tell
   me
